@@ -1,10 +1,11 @@
 from opengever.task import _
 from opengever.task.util import getTaskTypeVocabulary
+from plone.api.portal import get_current_language
 from plone.memoize import ram
 from zope.component.hooks import getSite
 
-#XXX remove me
-@ram.cache(lambda m, i, value: value)
+
+@ram.cache(lambda m, i, value: '{}-{}'.format(value, get_current_language()))
 def task_type_helper(item, value):
     """Translate the task type with the vdex vocabulary, which provides
     its own translations stored in the vdex files.
